# na-online_libfiffio

./: .hgignore  README.md
src/: CMakeLists.txt  LFBemIO.cpp  LFBemIO.h  LFBlocks.h  LFDataAcquisitionParametersIO.cpp  LFDataAcquisitionParametersIO.h  LFDataIO.cpp  LFDataIO.h  LFElementHeader.cpp  LFElementHeader.h  LFEventsIO.cpp  LFEventsIO.h  LFFileFIFF.cpp  LFFileFIFF.h  LFHPICoilIO.cpp  LFHPICoilIO.h  LFHPIMeasurementIO.cpp  LFHPIMeasurementIO.h  LFHPISubsystemIO.cpp  LFHPISubsystemIO.h  LFIsotrakIO.cpp  LFIsotrakIO.h  LFMeasurementIO.cpp  LFMeasurementIO.h  LFMeasurementInfoIO.cpp  LFMeasurementInfoIO.h  LFProjectIO.cpp  LFProjectIO.h  LFProjectionItemIO.cpp  LFProjectionItemIO.h  LFRawDataIO.cpp  LFRawDataIO.h  LFSSPIO.cpp  LFSSPIO.h  LFSubjectIO.cpp  LFSubjectIO.h  LFTags.h  doxyfile  fiffio.cpp  runccmake.sh
src/common/: CMakeLists.txt  LFArrayFloat2d.cpp  LFArrayFloat2d.h  LFArrayFloat3d.cpp  LFArrayFloat3d.h  LFArrayPtr.h  LFBemSurface.h  LFChannelInfo.cpp  LFChannelInfo.h  LFCoordTrans.h  LFData.cpp  LFData.h  LFDataAcquisitionParameters.h  LFDataBuffer.cpp  LFDataBuffer.h  LFDigitisationPoint.h  LFEvents.cpp  LFEvents.h  LFHPICoil.h  LFHPIMeasurement.cpp  LFHPIMeasurement.h  LFHPISubsystem.cpp  LFHPISubsystem.h  LFInterface.h  LFIsotrak.cpp  LFIsotrak.h  LFMeasurement.cpp  LFMeasurement.h  LFMeasurementInfo.cpp  LFMeasurementInfo.h  LFProject.cpp  LFProject.h  LFProjectionItem.cpp  LFProjectionItem.h  LFRawData.cpp  LFRawData.h  LFSSP.cpp  LFSSP.h  LFSubject.cpp  LFSubject.h
src/test/: CMakeLists.txt  testLFArrayFloat2d.h  testLFArrayFloat3d.h  testLFBemSurface.h  testLFChannelInfo.h  testLFCoordTrans.h  testLFData.h  testLFDataAcquisitionParameters.h  testLFMeasurement.h  testLFSubject.h
