INCLUDE(Dart)
OPTION(BUILD_TESTING "Build the project using CTest" ON)
IF(BUILD_TESTING)
	MESSAGE("Build testing")
	find_package(CxxTest)
	if(CXXTEST_FOUND)
		include_directories(${CXXTEST_INCLUDE_DIR})
		enable_testing()
		FIND_PROGRAM(CXXTEST_PERL_TESTGEN_EXECUTABLE cxxtestgen.pl PATHS /usr/local/cxxtest)
		CXXTEST_ADD_TEST(testLFMeasurement testLFMeasurement.cc
			${CMAKE_CURRENT_SOURCE_DIR}/test/testLFMeasurement.h)
		CXXTEST_ADD_TEST(testLFSubject testLFSubject.cc
			${CMAKE_CURRENT_SOURCE_DIR}/test/testLFSubject.h)
		target_link_libraries(testLFSubject ${CMAKE_CURRENT_BINARY_DIR}/libfiffio.so)
		#message(: ${})
	endif(CXXTEST_FOUND)
#	INCLUDE(CTest)
#	ENABLE_TESTING()
#	ADD_TEST(NAME testLFMeasurement COMMAND testLFMeasurement.h)
ENDIF(BUILD_TESTING)

